fix cutoff of smiley

--- a/mzalendo/core/static/css/desktop.css
+++ b/mzalendo/core/static/css/desktop.css
@@ -322,7 +322,7 @@ josh [at] supercooldesign.co.uk
   display: inline-block;
   vertical-align: middle;
   *vertical-align: auto;
-  height: 25px;
+  height: 32px;
   padding: 5px 0 0 130px;
   margin: -5px 0 0 24px;
   background: url(../images/d-smiley-sprite.png) 0 0 no-repeat;
